docs: Add final SEO article content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free tool to clean AI formatting, remove markdown, fix spacing, and count words. Perfect for cleaning text from ChatGPT, Gemini, and Claude before pasting into emails or essays.">
+    <meta name="description"
+        content="Free tool to clean AI formatting, remove markdown, fix spacing, and count words. Perfect for cleaning text from ChatGPT, Gemini, and Claude before pasting into emails or essays.">
     <title>CleanText Pro | AI Text Formatter & Word Counter</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header class="app-header">
         <div class="container">
@@ -20,25 +23,45 @@
         <section class="editor-section">
             <div class="toolbar">
                 <button id="btn-clean" class="btn primary" title="Remove markdown icons and <br> tags">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"/><path d="M21 3v5h-5"/></svg>
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8" />
+                        <path d="M21 3v5h-5" />
+                    </svg>
                     Clean AI Formatting
                 </button>
                 <button id="btn-spacing" class="btn secondary" title="Remove extra spaces and trailing whitespaces">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 9h16"/><path d="M4 15h16"/><path d="M10 3L8 5l2 2"/><path d="M14 21l2-2-2-2"/></svg>
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M4 9h16" />
+                        <path d="M4 15h16" />
+                        <path d="M10 3L8 5l2 2" />
+                        <path d="M14 21l2-2-2-2" />
+                    </svg>
                     Fix Spacing
                 </button>
                 <button id="btn-sentence" class="btn secondary" title="Capitalize only the first letter of sentences">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 7V4h16v3"/><path d="M9 20h6"/><path d="M12 4v16"/></svg>
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M4 7V4h16v3" />
+                        <path d="M9 20h6" />
+                        <path d="M12 4v16" />
+                    </svg>
                     Sentence Case
                 </button>
                 <button id="btn-copy" class="btn accent ms-auto">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"/><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/></svg>
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
+                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+                    </svg>
                     <span id="copy-text">Copy to Clipboard</span>
                 </button>
             </div>
-            
+
             <div class="textarea-wrapper">
-                <textarea id="text-input" placeholder="Paste your AI text here from ChatGPT, Gemini, Claude, etc..."></textarea>
+                <textarea id="text-input"
+                    placeholder="Paste your AI text here from ChatGPT, Gemini, Claude, etc..."></textarea>
             </div>
         </section>
 
@@ -59,14 +82,41 @@
     </main>
 
     <article class="seo-article container">
-        <h2>About CleanText Pro</h2>
+        <h2>Why You Need an AI Text Cleaner in 2026</h2>
         <div class="article-content">
-            <!-- SEO Text placeholder -->
-            <p>CleanText Pro is the ultimate free online tool to instantly format and clean your AI-generated text. Whether you are copying responses from ChatGPT, Google Gemini, or Claude, our tool seamlessly removes pesky markdown asterisks, hash tags, and unwanted line breaks. Ensure your text is perfectly formatted and ready to be pasted into emails, essays, or professional documents.</p>
-            <p>Enjoy real-time statistics including accurate word counts and estimated reading times, helping you optimize your content for any audience. Clean, format, and copy—all within a fast, privacy-focused, single-page application.</p>
+            <p>If you use AI tools like ChatGPT, Google Gemini, or Anthropic's Claude, you already know the frustration.
+                You ask the AI to write an email, a report, or an essay. It gives you a great answer, but when you copy
+                and paste it into Microsoft Word, Gmail, or Google Docs, it brings a mess of formatting with it.</p>
+            <p>You might see strange gray backgrounds, unwanted bold text (**like this**), hashtag headers (###), or
+                weird line breaks. Sending an email with this formatting immediately exposes that you used AI. CleanText
+                Pro is designed to fix this instantly.</p>
+
+            <h3>How to Remove AI Formatting Instantly</h3>
+            <p>Instead of manually deleting every asterisk or fixing the spacing line-by-line, you can use our free
+                tool. Simply paste your AI-generated text into the box above and click "Clean AI Formatting." Our script
+                automatically detects common markdown symbols used by Large Language Models (LLMs) and strips them out,
+                leaving you with pure, human-looking plain text.</p>
+
+            <h3>Beyond Cleaning: The Perfect Writer's Companion</h3>
+            <p>We didn't just stop at formatting. CleanText Pro includes essential daily utilities for students and
+                professionals:</p>
+
+            <p><strong>Fix Spacing:</strong> AI models sometimes generate double spaces or awkward gaps. One click
+                normalizes your document.</p>
+
+            <p><strong>Sentence Case Converter:</strong> Accidentally typed in ALL CAPS? Or did the AI format a list
+                strangely? Instantly convert your text to standard sentence case.</p>
+
+            <p><strong>Real-Time Word & Character Counter:</strong> Keep track of your length for social media limits,
+                essay requirements, or API token limits. We also calculate the estimated reading time based on the
+                standard 200 words-per-minute metric.</p>
+
+            <p>Bookmark CleanText Pro today to streamline your daily AI workflow. 100% free, private, and processes
+                entirely in your browser—none of your text is ever saved or sent to a server.</p>
         </div>
     </article>
 
     <script src="script.js"></script>
 </body>
+
 </html>
