style: enhance UI with Glassmorphism, modern gradients, and new logo

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
 <body>
     <header class="app-header">
-        <div class="container">
-            <h1>CleanText Pro: Free AI Text Formatter & Word Counter</h1>
-            <p>Instantly clean, format, and perfect your AI-generated text.</p>
+        <div class="container header-content">
+            <img src="logo.png" alt="CleanText Pro Logo" class="app-logo">
+            <div class="header-text">
+                <h1>CleanText Pro: Free AI Text Formatter & Word Counter</h1>
+                <p>Instantly clean, format, and perfect your AI-generated text.</p>
+            </div>
         </div>
     </header>
 
