--- a/index.html
+++ b/index.html
@@ -52,6 +52,33 @@
                     </svg>
                     Sentence Case
                 </button>
+                <button id="btn-title" class="btn secondary" title="Capitalize First Letter of Every Word">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="4 7 4 4 20 4 20 7"></polyline>
+                        <line x1="9" y1="20" x2="15" y2="20"></line>
+                        <line x1="12" y1="4" x2="12" y2="20"></line>
+                    </svg>
+                    Title Case
+                </button>
+                <button id="btn-download" class="btn secondary" title="Download text as a .txt file">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                        <polyline points="7 10 12 15 17 10"></polyline>
+                        <line x1="12" y1="15" x2="12" y2="3"></line>
+                    </svg>
+                    Download
+                </button>
+                <button id="btn-clear" class="btn secondary" title="Clear all text"
+                    style="color: #dc2626; border-color: #fecaca;">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="3 6 5 6 21 6"></polyline>
+                        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                    </svg>
+                    Clear All
+                </button>
                 <button id="btn-copy" class="btn accent ms-auto">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round">
@@ -100,21 +127,30 @@
                 automatically detects common markdown symbols used by Large Language Models (LLMs) and strips them out,
                 leaving you with pure, human-looking plain text.</p>
 
-            <h3>Beyond Cleaning: The Perfect Writer's Companion</h3>
-            <p>We didn't just stop at formatting. CleanText Pro includes essential daily utilities for students and
-                professionals:</p>
+            <h3>Why Clean AI Text? (FAQ)</h3>
+            <div class="faq-accordion">
+                <details>
+                    <summary>Why do I need to remove invisible characters?</summary>
+                    <p>AI models frequently output zero-width spaces and non-breaking spaces. While you can't see them,
+                        they will break code execution and cause strange spacing issues when pasting into WordPress or
+                        other CMS platforms.</p>
+                </details>
+                <details>
+                    <summary>Why normalize smart quotes and dashes?</summary>
+                    <p>Text editors and AIs often use curly “smart quotes” and long em-dashes (—). These characters
+                        cause massive formatting errors in spreadsheets and coding IDEs. We automatically convert them
+                        to standard straight quotes ("") and hyphens (-).</p>
+                </details>
+                <details>
+                    <summary>Can I download my cleaned results?</summary>
+                    <p>Yes! With our advanced toolset, you can download your perfectly formatted text as a plain `.txt`
+                        file directly to your device for safe keeping, alongside fixing capitalization with Title Case
+                        and Sentence Case utilities.</p>
+                </details>
+            </div>
 
-            <p><strong>Fix Spacing:</strong> AI models sometimes generate double spaces or awkward gaps. One click
-                normalizes your document.</p>
-
-            <p><strong>Sentence Case Converter:</strong> Accidentally typed in ALL CAPS? Or did the AI format a list
-                strangely? Instantly convert your text to standard sentence case.</p>
-
-            <p><strong>Real-Time Word & Character Counter:</strong> Keep track of your length for social media limits,
-                essay requirements, or API token limits. We also calculate the estimated reading time based on the
-                standard 200 words-per-minute metric.</p>
-
-            <p>Bookmark CleanText Pro today to streamline your daily AI workflow. 100% free, private, and processes
+            <p style="margin-top: 1.5rem;">Bookmark CleanText Pro today to streamline your daily AI workflow. 100% free,
+                private, and processes
                 entirely in your browser—none of your text is ever saved or sent to a server.</p>
         </div>
     </article>
