feat: add favicon to browser tabs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>CleanText Pro | AI Text Formatter & Word Counter</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="logo.png">
 </head>
 
 <body>
