--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>CleanText Pro | AI Text Formatter & Word Counter</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="logo.png?v=2">
 </head>
 
 <body>
     <header class="app-header">
         <div class="container header-content">
-            <img src="logo.png" alt="CleanText Pro Logo" class="app-logo">
+            <img src="logo.png?v=2" alt="CleanText Pro Logo" class="app-logo">
             <div class="header-text">
                 <h1>CleanText Pro: Free AI Text Formatter & Word Counter</h1>
                 <p>Instantly clean, format, and perfect your AI-generated text.</p>
