feat: add legal footer and privacy.html for adsense

--- a/index.html
+++ b/index.html
@@ -156,6 +156,16 @@
         </div>
     </article>
 
+    <footer class="app-footer">
+        <div class="container footer-content">
+            <p>&copy; 2026 CleanText Pro. All rights reserved.</p>
+            <div class="footer-links">
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="mailto:contact@cleantextpro.app">Contact Us</a>
+            </div>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
